--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "allowSyntheticDefaultImports": true,
     "types": ["node"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "data"],
   "exclude": ["node_modules", "dist"]
 }
